<resources>
    <string name="app_name">HelpMusic</string>
    <string name="email" translatable="true">Email</string>
    <string name="password" translatable="true">Password</string>
    <string name="forgotPassword" translatable="true">Forgot password</string>
    <string name="signUp" translatable="true">Sign Up Here</string>
    <string name="signUpButton" translatable="true">Sign Up</string>
    <string name="name" translatable="true">Name</string>
    <string name="search_hint" translatable="true">Search</string>
    <string name="usrFragmentAddFriendBtn" translatable="true">Add as a friend</string>
    <string name="login" translatable="true">Log In</string>
</resources>
